--- a/public/styles.css
+++ b/public/styles.css
@@ -23,8 +23,9 @@
     font-size: 40px;
 }
 #wrapper{
-    margin: 20px 0px;
-    width: 800px;
+    margin: 20px 20px;
+    width: 80%;
+    max-width: 800px;
     min-height: 400px;
     display: flex;
     flex-direction: column;
@@ -139,7 +140,7 @@
 #result-container-2{
     position: relative;
     width: 100%;
-    height: 400px;
+    min-height: 400px;
     padding: 20px 60px;
 }
 #result-intro-3{
@@ -203,6 +204,9 @@ li{
 }
 .answer-panel > .answer{
     max-width: 530px;
+}
+.answer-panel > .score{
+    min-width: 72px;
 }
 .hide{
     display: none;
