--- a/public/styles.css
+++ b/public/styles.css
@@ -1,219 +1,322 @@
-*{
+/* Global */
+html {
+    font-size: 12px;
+}
+
+@media (max-width: 460px) {
+    html {
+        font-size: 6px;
+    }
+}
+
+* {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-size: 2rem;
+    font-family: Arial, Helvetica;
     box-sizing: border-box;
-    overflow: auto;
 }
-#quiz-app{
+
+h1 {
+    font-size: 3rem;
+}
+
+h3 {
+    font-size: 2.5rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    margin: 0px auto;
+    display: block;
+}
+
+.btn {
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, .75);
+    background-color: white;
+    cursor: pointer;
+}
+
+.btn:hover {
+    box-shadow: 0px 18px 8px -10px rgba(0, 0, 0, .75);
+    transform: scale(1.1);
+}
+
+@media (max-width: 460px) {
+    .btn {
+        padding: 5px 10px;
+    }
+}
+
+.hide {
+    display: none;
+}
+
+/* Layout */
+main {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(
-        90deg,
-        rgba(93, 12, 255, 1) 0%,
-        rgba(155, 0, 250, 1) 100%
-    );
+    background: linear-gradient(90deg,
+            rgb(0, 219, 190) 0%,
+            rgb(49, 241, 255) 100%);
 }
-#title{
+
+#title {
     margin-top: 20px;
+    font-size: 3.5rem;
     color: white;
-    font-size: 40px;
 }
-#wrapper{
-    margin: 20px 20px;
+
+.main-container {
+    position: relative;
     width: 80%;
     max-width: 800px;
-    min-height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    margin: 20px;
     border-radius: 5px;
-    box-shadow: 3px 3px 5px rgb(56, 20, 90);
+    box-shadow: 5px 5px 3px -2px rgba(0, 0, 0, .75);
     background-color: white;
-    font-size: 25px;
 }
-#start-container > img{
-    width: 100%;
+
+/* Start container */
+#start-container #text {
+    padding: 30px;
+    padding-bottom: 0px;
 }
-#start-container > #description{
-    position: relative;
+
+#start-container p {
+    margin: 10px 0px;
+}
+
+#start-container #intro-1 {
+    padding: 5px 0px;
+}
+
+#start-container #intro-2 {
+    font-weight: 600;
+}
+
+#start-btn {
+    float: right;
+    margin: -10px 30px 30px 0px;
+}
+
+@media (max-width: 460px) {
+    #start-container #text {
+        padding: 15px;
+        padding-bottom: 0px;
+    }
+
+    #start-container p {
+        margin: 5px 0px;
+    }
+
+    #start-btn {
+        margin: -5px 15px 15px 0px;
+    }
+}
+
+/* Quiz container */
+#quiz-container {
     padding: 30px;
 }
-#start-title{
-    font-size: 35px;
-    font-weight: 700;
-}
-#start-intro-1{
+
+#quiz-container #question {
     margin: 10px 0px;
-    font-size: 20px;
 }
-#start-intro-2{
-    margin-bottom: 20px;
-    font-size: 23px;
-    font-weight: 550;
-}
-#start-btn{
-    float: right;
-    padding: 10px 20px;
-    font-size: 20px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 3px black;
-    background-color: white;
-    cursor: pointer;
-}
-#quiz-container{
-    width: 100%;
-    padding: 20px;
-}
-#quiz-container > #progress{
-    font-size: 20px;
-}
-#quiz-container > #question{
-    margin: 20px 0px;
-    font-size: 30px;
-}
-#quiz-container > #answers{
+
+#quiz-container #options-container {
     display: flex;
     flex-direction: column;
 }
-#quiz-container .answer{
-    margin-top: 5px;
-    padding: 20px;
+
+#quiz-container .option {
     min-height: 60px;
+    margin-top: 5px;
+    padding: 10px 20px;
     text-align: left;
-    font-size: 20px;
     cursor: pointer;
 }
-#progress-bar{
-    margin-top: 15px;
-    width: 100%;
+
+#progress-bar {
     height: 30px;
+    width: 100%;
+    margin-top: 15px;
     border-radius: 20px;
     background-color: rgb(204, 204, 204);
 }
-#progress-bar-full{
-    width: 0%;
+
+#progress-bar-full {
     height: 100%;
+    width: 0%;
     border-radius: 20px;
-    box-shadow: 0 3px 3px -5px black;
-    background: linear-gradient(to left, rgb(0, 4, 255), rgb(124, 88, 255));
+    background: linear-gradient(to left, rgb(97, 244, 255), rgb(0, 209, 146));
     transition: 0.5s ease;
 }
-#result-container{
-    width: 100%;
-    background-color: white;
+
+@media (max-width: 460px) {
+    #quiz-container {
+        padding: 15px;
+    }
+
+    #quiz-container .option {
+        min-height: 30px;
+        padding: 5px 10px;
+    }
+
+    #progress-bar {
+        height: 15px;
+        width: 100%;
+        margin-top: 10px;
+    }
 }
-#result-container-1{
-    position: relative;
-    width: 100%;
-    height: 400px;
+
+/* Result container */
+#score-container {
+    padding: 150px 40px 30px;
     background-image: url("Assets/result.jpg");
+    background-position: 100%;
+    background-repeat: no-repeat;
     background-size: cover;
 }
-#score-container{
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
-    left: 30px;
-    padding: 20px 30px;
-    height: 200px;
+
+#score-container #text {
+    padding: 30px;
     border-radius: 5px;
-    box-shadow: 3px 3px 5px rgb(56, 20, 90);
+    box-shadow: 5px 5px 3px -2px rgba(0, 0, 0, .75);
     background-color: white;
 }
-#result-intro-1{
-    font-weight: 700;
-    font-size: 23px;
+
+#score-container #text-1 {
+    font-weight: 600;
 }
-#score-container > #score{
+
+#score-container #score {
     margin: 15px 0px;
-    font-weight: 700;
-    font-size: 26px;
 }
-#result-intro-2{
-    font-size: 17px;
+
+#score-container #text-2 {
+    font-size: 1.6rem;
 }
-#result-container-2{
-    position: relative;
-    width: 100%;
-    min-height: 400px;
-    padding: 20px 60px;
+
+#tips-container {
+    margin: 10px 0px;
+    padding: 20px 70px 70px;
 }
-#result-intro-3{
-    margin-bottom: 10px;
-    font-weight: 700;
-    font-size: 25px;
+
+#tips-container #text-1 {
+    font-weight: 600;
 }
-ul{
-    list-style-type: circle;
+
+ul {
     list-style-position: inside;
 }
-li{
-    margin: 10px 0px 10px 20px;
-    font-weight: 500;
-    font-size: 22px;
+
+li {
+    margin: 10px 20px;
 }
-#rerun-btn{
+
+#restart-btn {
     float: right;
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 20px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 3px black;
-    background-color: white;
-    cursor: pointer;
 }
-#divider{
-    margin: 0px 60px;
-    border: 2px solid grey;
-    border-radius: 1px;
-    background-color: grey;
+
+#answers-container {
+    margin: 20px 70px;
+    padding: 20px 0px;
+    border-top: 2px solid grey;
 }
-#result-container-3{
-    width: 100%;
-    padding: 20px 60px;
-}
-.result-panel{
-    margin-bottom: 10px;
+
+.answer-container {
+    margin: 20px 0px;
     position: relative;
 }
-.result-panel > .progress{
+
+.answer-container .progress {
     position: absolute;
     top: 0px;
     left: 0px;
     font-weight: 600;
-    font-size: 23px;
 }
-.result-panel > .question{
-    margin-bottom: 10px;
+
+.answer-container .question {
     padding-left: 70px;
     font-weight: 600;
-    font-size: 23px;
 }
-.result-panel > .answer-panel{
-    margin-bottom: 10px;
+
+.answer-container .options {
     padding-left: 70px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    font-size: 20px;
+}
+
+.answer-container .option {
+    width: 100%;
+    margin: 10px 0px;
+    display: flex;
+    justify-content: space-between;
     color: rgb(128, 128, 128);
 }
-.answer-panel > .answer{
-    max-width: 530px;
+
+.answer-container .answer {
+    width: 72%;
+    font-size: 1.8rem;
 }
-.answer-panel > .score{
-    min-width: 72px;
+
+.answer-container .score {
+    width: 23%;
+    font-size: 1.8rem;
 }
-.hide{
-    display: none;
-}
-#start-btn:hover{
-    transform: scale(1.1);
-}
-#rerun-btn:hover{
-    transform: scale(1.1);
+
+@media (max-width: 460px) {
+    #score-container {
+        padding: 75px 20px 15px;
+    }
+
+    #score-container #text {
+        padding: 15px;
+    }
+
+    #score-container #score {
+        margin: 7px 0px;
+    }
+
+    #tips-container {
+        margin: 5px 0px;
+        padding: 10px 35px 35px;
+    }
+
+    li {
+        margin: 5px 10px;
+    }
+
+    #restart-btn {
+        margin: 10px 0px;
+    }
+
+    #answers-container {
+        margin: 10px 35px;
+        padding: 10px 0px;
+    }
+
+    .answer-container {
+        margin: 10 0px;
+    }
+
+    .answer-container .question {
+        padding-left: 35px;
+    }
+
+    .answer-container .options {
+        padding-left: 35px;
+    }
+
+    .answer-container .option {
+        margin: 5px 0px;
+    }
 }
