--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,100 +7,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
     <script defer type="module" src="script.js"></script>
-    <title>Healthy Diet Quiz App</title>
+    <title>Healthy Diet Quiz</title>
 </head>
 
 <body>
-    <div id="quiz-app">
+    <main>
         <h1 id="title">Healthy Diet Quiz</h1>
-        <div id="wrapper">
-            <div id="start-container">
-                <img src="Assets/StartImg.jfif" alt="FoodAppImg">
-                <div id="description">
-                    <h1 id="start-title">Test your diet choices</h1>
-                    <div id="start-intro-1">A healthy and versatile diet is the sum of its parts. There are many ways to
-                        build a good diet. The most frequent food choices you make in everyday life are decisive.</div>
-                    <div id="start-intro-2">This test will give an indicative assessment of the healthiness of your
-                        diet.
-                    </div>
-                    <button id="start-btn">Start test</button>
+        <div id="start-container" class="main-container">
+            <img src="Assets/StartImg.jfif" alt="FoodAppImg">
+            <div id="text">
+                <h1>Test your diet choices</h1>
+                <p id="intro-1">A healthy and versatile diet is the sum of its parts. There are many ways to
+                    build a good diet. The most frequent food choices you make in everyday life are decisive.</p>
+                <p id="intro-2">This test will give an indicative assessment of the healthiness of your diet.</p>
+            </div>
+            <button id="start-btn" class="btn">Start test</button>
+        </div>
+
+        <div id="quiz-container" class="main-container hide">
+            <p id="progress">Question 1/14:</p>
+            <h3 id="question">Question 1?</h3>
+            <div id="options-container">
+                <button class="option">Option 1</button>
+                <button class="option">Option 2</button>
+                <button class="option">Option 3</button>
+            </div>
+            <div id="progress-bar">
+                <div id="progress-bar-full" data-done="0"></div>
+            </div>
+        </div>
+
+        <div id="result-container" class="main-container hide">
+            <div id="score-container">
+                <div id="text">
+                    <p id="text-1">Have you thought about your own diet?</p>
+                    <h1 id="score">Your score: 13/37</h1>
+                    <p id="text-2">Based on the test, it would appear that by making changes to your diet, your health
+                        might improve. By comparing your answers below the page, you can see what changes your diet
+                        would
+                        improve.</p>
                 </div>
             </div>
-
-            <div id="quiz-container" class="hide">
-                <div id="progress">Question 1/14:</div>
-                <div id="question">Question 1?</div>
-                <div id="answers">
-                    <button class="answer">Answer 1</button>
-                    <button class="answer">Answer 2</button>
-                    <button class="answer">Answer 3</button>
-                </div>
-                <div id="progress-bar">
-                    <div id="progress-bar-full" data-done="0"></div>
-                </div>
+            <div id="tips-container">
+                <p id="text-1">A few tips for improving the quality of your diet:</p>
+                <ul>
+                    <li>Eat vegetables at every meal.</li>
+                    <li>Replace light grain products with whole grain products.</li>
+                    <li>Pay attention to the use of salt and the amount of salt in the products. Select a product
+                        with less salt.</li>
+                    <li>Eat fresh fruits and berries instead of sugar delicacies.</li>
+                    <li>Swap food containing red meat for fish, chicken or vegetable protein.</li>
+                </ul>
+                <button id="restart-btn" class="btn">RERUN THE TEST</button>
             </div>
-
-            <div id="result-container" class="hide">
-                <div id="result-container-1">
-                    <div id="score-container">
-                        <div id="result-intro-1">Have you thought about your own diet?</div>
-                        <div id="score">Your score: 13/37</div>
-                        <div id="result-intro-2">Based on the test, it would appear that by making changes to your diet,
-                            your health might improve.
-                            By comparing your answers below the page, you can see what changes your diet would improve.
+            <div id="answers-container">
+                <div class="answer-container">
+                    <p class="progress">1/14</p>
+                    <p class="question">Question 1</p>
+                    <div class="options">
+                        <div class="option">
+                            <p class="answer">Answer 1</p>
+                            <p class="score">0 points</p>
+                        </div>
+                        <div class="option">
+                            <p class="answer">Answer 2</p>
+                            <p class="score">0 points</p>
                         </div>
                     </div>
                 </div>
-                <div id="result-container-2">
-                    <div id="result-intro-3">A few tips for improving the quality of your diet:</div>
-                    <ul>
-                        <li>Eat vegetables at every meal.</li>
-                        <li>Replace light grain products with whole grain products.</li>
-                        <li>Pay attention to the use of salt and the amount of salt in the products. Select a product
-                            with less salt.</li>
-                        <li>Eat fresh fruits and berries instead of sugar delicacies.</li>
-                        <li>Swap food containing red meat for fish, chicken or vegetable protein.</li>
-                    </ul>
-                    <button id="rerun-btn">RERUN THE TEST</button>
-                </div>
-                <div id="divider"></div>
-                <div id="result-container-3">
-                    <div class="result-panel">
-                        <div class="progress">1/14</div>
-                        <div class="question">Quesiton 1</div>
-                        <div class="answer-panel">
-                            <div class="answer">Answer 1</div>
-                            <div class="score">0 points</div>
+                <div class="answer-container">
+                    <p class="progress">2/14</p>
+                    <p class="question">Question 2</p>
+                    <div class="options">
+                        <div class="option">
+                            <p class="answer">Answer 1</p>
+                            <p class="score">0 points</p>
                         </div>
-                        <div class="answer-panel">
-                            <div class="answer">Answer 2</div>
-                            <div class="score">2 points</div>
-                        </div>
-                        <div class="answer-panel">
-                            <div class="answer">Answer 3</div>
-                            <div class="score">4 points</div>
-                        </div>
-                    </div>
-                    <div class="result-panel">
-                        <div class="progress">2/14</div>
-                        <div class="question">Quesiton 2</div>
-                        <div class="answer-panel">
-                            <div class="answer">Answer 1</div>
-                            <div class="score">0 points</div>
-                        </div>
-                        <div class="answer-panel">
-                            <div class="answer">Answer 2</div>
-                            <div class="score">2 points</div>
-                        </div>
-                        <div class="answer-panel">
-                            <div class="answer">Answer 3</div>
-                            <div class="score">4 points</div>
+                        <div class="option">
+                            <p class="answer">Answer 2</p>
+                            <p class="score">0 points</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
